--- a/styles/style.css
+++ b/styles/style.css
@@ -259,7 +259,7 @@ input.button {
 	transition: background 1s ease-in-out;
 }
 
-input.button:hover {
+.buttonHover:hover {
 	background: #e64c65;
 	color: #fff;
 	-webkit-transition: background 1s ease-in-out;
